[package]
name = "find-cdr3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
clap = { version = "4.4.10", features = ["derive"] }
itertools = "*"
rayon = "*"
flate2 = { version = "*", features = ["zlib-ng"] }
seq_io = "*"